Try to prevent annoying hrz scroll issue on mobile (2)

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -90,9 +90,11 @@ body{
     overflow-x: hidden;
     text-rendering: optimizeSpeed;
     background: #FFF;
+    position: relative;
 }
 
 html {
+  overflow-x: hidden;
   font-size: 24px;
   font-weight: 100;
   line-height: 1.5;
